added padding in changelog

--- a/pages/changelog.mdx
+++ b/pages/changelog.mdx
@@ -3,7 +3,7 @@ import Section from "components/section";
 
 <Nav />
 
- <Section className="changelog p-12">
+ <Section className="changelog px-16">
 
 # Chatterino Changelog
 
