--- a/pages/changelog.mdx
+++ b/pages/changelog.mdx
@@ -67,6 +67,11 @@ import Section from "components/section";
 
 - Quality of live improvements
 
+  - Major: Added custom FrankerFaceZ VIP Badges. (#2628)
+  - Minor: Added `in:<channels>` search filter to find messages sent in specific channels. (#2299, #2634)
+  - Minor: Allow for built-in Chatterino commands to be used in custom commands. (#2632)
+  - Bugfix: Size of splits not saved properly (#2362, #2548)
+  - Bugfix: Fix crash that could occur when the user changed the "Custom stream player URI Scheme" setting if the user had closed down and splits in the application runtime. (#2592)
   - Minor: Added a keyboard shortcut (Ctrl+F5) for "Reconnect" (#2215)
   - Minor: Improved viewer list window.
   - Minor: Added a button to the split context menu to open the moderation view for a channel when the account selected has moderator permissions. (#2321)
