--- a/pages/changelog.mdx
+++ b/pages/changelog.mdx
@@ -7,6 +7,28 @@ import Section from "components/section";
 
 # Chatterino Changelog
 
+## 2.3.1
+
+- Fixed crashing when the extension is active. (#2704)
+- Added the ability to highlight messages based on user badges. (#1704)
+
+<br />
+
+ <div className="text-sm text-blue-200">
+
+- Minor: Added visual indicator to message length if over 500 characters long (#2659)
+- Minor: Added `is:<flags>` search filter to find messages of specific types. (#2653, #2671)
+- Minor: Added image links to the badge context menu. (#2667)
+- Minor: Added a setting to hide Twitch Predictions badges. (#2668)
+- Minor: Optionally remove spaces between emotes. (#2651)
+- Minor: Improved UX of `Rename Tab` dialog. (#2713)
+- Bugfix: Added missing Copy/Open link context menu entries to emotes in Emote Picker. (#2670)
+- Bugfix: Fixed visual glitch with smooth scrolling. (#2084)
+- Bugfix: Clicking on split header focuses its split. (#2720)
+- Bugfix: Handle new user messages (aka "rituals") properly. (#2703)
+
+</div>
+
 ## 2.3
 
 - Added "Channel Filters". See https://wiki.chatterino.com/Filters/ for more information. (#1748, #2083, #2090, #2200, #2225)
