Fix picky next builder

--- a/pages/changelog.mdx
+++ b/pages/changelog.mdx
@@ -493,7 +493,8 @@ import Section from "components/section";
 
   <a href="https://cbenni.com" target="_blank">
     cbenni.com
-  </a> and
+  </a>
+  and
   <a href="https://overrustlelogs.net/" target="_blank">
     overrustlelogs.net
   </a>
