--- a/pages/changelog.mdx
+++ b/pages/changelog.mdx
@@ -7,6 +7,18 @@ import Section from "components/section";
 
 # Chatterino Changelog
 
+## 2.4.2
+
+*Note: This release fixes FFZ emotes since their API changed the URL format.*
+
+- Minor: Added `/banid` command that allows banning by user ID. (#4411)
+- Bugfix: Fixed FrankerFaceZ emotes/badges not loading due to an API change. (#4432)
+- Bugfix: Fixed uploaded AppImage not being able to execute most web requests. (#4400)
+- Bugfix: Fixed a potential race condition due to using the wrong lock when loading 7TV badges. (#4402)
+- Dev: Delete all but the last 5 crashdumps on application start. (#4392)
+- Dev: Added capability to build Chatterino with Qt6. (#4393)
+- Dev: Fixed homebrew update action. (#4394)
+
 ## 2.4.1
 
 - Major: Added live emote updates for BTTV. (#4147)
