--- a/pages/changelog.mdx
+++ b/pages/changelog.mdx
@@ -20,7 +20,7 @@ import Section from "components/section";
 - Minor: Added better filter validation and error messages. (#4364)
 - Minor: Updated the look of the Black Theme to be more in line with the other themes. (#4523)
 - Minor: Re-added leading @mentions from replies in chat logs. These were accidentally removed during the reply overhaul. (#4420)
-- Minor: Updated the MacOS icon to match the look of other Mac Apps (#4577)
+- Minor: Updated the macOS icon to be consistent with the design of other applications on macOS. (#4577)
 - Bugfix: Fixed an issue where Chatterino could lose track of the sound device in certain scenarios. (#4549)
 - Bugfix: Fixed an issue where animated emotes would render on top of zero-width emotes. (#4314)
 - Bugfix: Fixed an issue where it was difficult to hover a zero-width emote. (#4314)
