Run prettier on pages/app & pages/changelog

--- a/pages/changelog.mdx
+++ b/pages/changelog.mdx
@@ -9,8 +9,7 @@ import Section from "components/section";
 
 ## 2.4.3 (Released 2023-05-04)
 
-
-*Note: This release fixes Twitch viewer list not loading for moderators & badges not loading.*
+_Note: This release fixes Twitch viewer list not loading for moderators & badges not loading._
 
 - Major: Added support for FrankerFaceZ animated emotes. (#4434)
 - Minor: Added the ability to reply to a message by `Shift + Right Click`ing the username. (#4424)
@@ -38,7 +37,7 @@ import Section from "components/section";
 
 ## 2.4.2 (Released 2023-03-06)
 
-*Note: This release fixes FFZ emotes since their API changed the URL format.*
+_Note: This release fixes FFZ emotes since their API changed the URL format._
 
 - Minor: Added `/banid` command that allows banning by user ID. (#4411)
 - Bugfix: Fixed FrankerFaceZ emotes/badges not loading due to an API change. (#4432)
@@ -254,7 +253,6 @@ import Section from "components/section";
 - Dev: Error NetworkResults now include the body data. (#3987)
 - Dev: Automatically generate resources files with cmake. (#4159, #4167)
 
-
 ## 2.3.5 (Released 2022-04-05)
 
 - Major: Added highlights for first messages (#3267)
@@ -373,7 +371,7 @@ import Section from "components/section";
 - Dev: Notebook::select\* functions now take an optional `focusPage` parameter (true by default) which keeps the default behaviour of selecting the page after it has been selected. If set to false, the page is _not_ focused after being selected. (#3446)
 - Dev: Updated PubSub client to use TLS v1.2 (#3599)
 - Dev: Use system logical core count for Ubuntu/macOS GitHub actions builds. (#3602)
- 
+
 ## 2.3.4 (Released 2022-08-05)
 
 - Major: Fixed connection issues when joining 20+ channels. (#3112, #3115)
@@ -395,7 +393,6 @@ import Section from "components/section";
 - Dev: Ubuntu packages are now available (#2936)
 - Dev: Disabled update checker on Flatpak. (#3051)
 - Dev: Add logging for HTTP requests (#2991)
-
 
 ## 2.3.3 (Released 2022-07-13)
 
@@ -434,7 +431,7 @@ import Section from "components/section";
 - Bugfix: Fix reconnecting when IRC write connection is lost (#1831, #2356, #2850, #2892)
 - Bugfix: Fixed bit and new subscriber emotes not (re)loading in some rare cases. (#2856, #2857)
 - Bugfix: Fixed subscription emotes showing up incorrectly in the emote menu. (#2905)
- 
+
 ## 2.3.2 (Released 2021-05-16)
 
 - New split for channels going live. (#1797)
@@ -879,4 +876,5 @@ import Section from "components/section";
 
 </Section>
 
-<br /><br />
+<br />
+<br />
