--- a/pages/changelog.mdx
+++ b/pages/changelog.mdx
@@ -7,6 +7,18 @@ import Section from "components/section";
 
 # Chatterino Changelog
 
+## 2.4.4
+
+- Minor: Added `/shield` and `/shieldoff` commands to toggle shield mode. (#4580)
+- Minor: Added a Send button in the input box so you can click to send a message. This is disabled by default and can be enabled with the "Show send message button" setting. (#4607)
+- Minor: Improved error messages when the updater fails a download. (#4594)
+- Bugfix: Fixed an issue where some menus warp around on macOS. (#4595)
+- Bugfix: Fixed link tooltips not showing unless the thumbnail setting was enabled. (#4597)
+- Bugfix: Domains starting with `http` are now parsed as links again. (#4598)
+- Bugfix: Fixed Ctrl+Backspace not working after Select All in chat search popup. (#4461)
+- Bugfix: Fixed rare crash when scrolling up really fast. (#4621)
+- Bugfix: Fixed click effects on buttons not being antialiased. (#4473)
+
 ## 2.4.3 (Released 2023-05-04)
 
 _Note: This release fixes Twitch viewer list not loading for moderators & badges not loading._
