Add the 2.4.4 release date to Changelog

--- a/pages/changelog.mdx
+++ b/pages/changelog.mdx
@@ -7,7 +7,7 @@ import Section from "components/section";
 
 # Chatterino Changelog
 
-## 2.4.4
+## 2.4.4 (Released 2023-05-13)
 
 - Minor: Added `/shield` and `/shieldoff` commands to toggle shield mode. (#4580)
 - Minor: Added a Send button in the input box so you can click to send a message. This is disabled by default and can be enabled with the "Show send message button" setting. (#4607)
