chore: remove duplicate word

--- a/pages/changelog.mdx
+++ b/pages/changelog.mdx
@@ -17,7 +17,7 @@ This change brings a few less tested consequences, such as emote order being
 a bit different and some UI changes. These are being worked on for the next
 release.
 
-- Bugfix: Fix a [security issue when loading webp image files loading](https://www.qt.io/blog/two-qt-security-advisorys-gdi-font-engine-webp-image-format). To achieve this, Qt was updated from 5.15 to 6.5. (#4844)
+- Bugfix: Fix a [security issue when loading webp image files](https://www.qt.io/blog/two-qt-security-advisorys-gdi-font-engine-webp-image-format). To achieve this, Qt was updated from 5.15 to 6.5. (#4844)
 - Minor: Support for Windows 7 and Windows 8 was discontinued to keep up with the above-mentioned security fixes as well as future ones.
 - Minor: Migrate to the new Get Channel Followers Helix endpoint, fixing follower count not showing up in usercards. (#4809)
 
