--- a/pages/changelog.mdx
+++ b/pages/changelog.mdx
@@ -1,5 +1,5 @@
-import Nav from "components/nav";
-import Section from "components/section";
+import Nav from "../components/nav";
+import Section from "../components/section";
 
 <Nav />
 
