--- a/pages/changelog.mdx
+++ b/pages/changelog.mdx
@@ -7,7 +7,7 @@ import Section from "../components/section";
 
 # Chatterino Changelog
 
-## 2.5.0 beta 1 (Released 2024-04-07)
+## 2.5.0 (Released 2024-04-21)
 
 - Major: Twitch follower emotes can now be correctly tabbed in other channels when you are subscribed to the channel the emote is from. (#4922)
 - Major: Added `/automod` split to track automod caught messages across all open channels the user moderates. (#4986, #5026)
@@ -17,7 +17,7 @@ import Section from "../components/section";
 - Minor: The `/usercard` command now accepts user ids. (`/usercard id:22484632`) (#4934)
 - Minor: Added menu actions to reply directly to a message or the original thread root. (#4923)
 - Minor: The `/reply` command now replies to the latest message from the user. Due to this change, the message you intended to reply to is now shown in the reply context, instead of the first message in a thread. (#4919)
-- Minor: The chatter list button is now hidden if you don't have moderator privileges. (#5245)
+- Minor: The chatter list button is now hidden if you don't have moderator privileges. (#5245, #5336)
 - Minor: Live streams that are marked as reruns now mark a tab as yellow instead of red. (#5176, #5237)
 - Minor: Allowed theming of tab live and rerun indicators. (#5188)
 - Minor: The _Restart on crash_ setting works again on Windows. (#5012)
@@ -61,6 +61,15 @@ import Section from "../components/section";
 - Minor: Change Lua `CompletionRequested` handler to use an event table. (#5280)
 - Minor: Changed the layout of the about page. (#5287)
 - Minor: Add duration to multi-month anon sub gift messages. (#5293)
+- Minor: Added context menu action to toggle visibility of offline tabs. (#5318)
+- Minor: Report sub duration for more multi-month gift cases. (#5319)
+- Minor: Improved error reporting for the automatic streamer mode detection on Linux and macOS. (#5321)
+- Bugfix: Fixed a crash that could occur on Wayland when using the image uploader. (#5314)
+- Bugfix: Fixed split tooltip getting stuck in some cases. (#5309)
+- Bugfix: Fixed the version string not showing up as expected in Finder on macOS. (#5311)
+- Bugfix: Fixed links having `http://` added to the beginning in certain cases. (#5323)
+- Bugfix: Fixed topmost windows from losing their status after opening dialogs on Windows. (#5330)
+- Bugfix: Fixed a gap appearing when using filters on `/watching`. (#5329)
 - Bugfix: Fixed an issue where certain emojis did not send to Twitch chat correctly. (#4840)
 - Bugfix: Fixed the `/shoutout` command not working with usernames starting with @'s (e.g. `/shoutout @forsen`). (#4800)
 - Bugfix: Fixed capitalized channel names in log inclusion list not being logged. (#4848)
