--- a/pages/changelog.mdx
+++ b/pages/changelog.mdx
@@ -7,6 +7,10 @@ import Section from "../components/section";
 
 # Chatterino Changelog
 
+## 2.5.1 (Released 2024-04-28)
+
+- Bugfix: Fixed links without a protocol not being clickable. (#5345)
+
 ## 2.5.0 (Released 2024-04-21)
 
 - Major: Twitch follower emotes can now be correctly tabbed in other channels when you are subscribed to the channel the emote is from. (#4922)
