--- a/pages/changelog.mdx
+++ b/pages/changelog.mdx
@@ -194,7 +194,7 @@ Authored by @pajlada
 
 <div className="changelog-entry">
 
-We now use Twitch's Helix API to load the list of emote's you can post. This means we can now see most emotes you have access to, including event emotes.
+We now use Twitch's Helix API to load the list of emotes you can post. This means we can now see most emotes you have access to, including event emotes.
 
 Authored by @nerixyz with help from @Felanbird @occluder @iProdigy @pajlada
 
